# robot-test-creator

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
example/: suite1.robot  suite2.robot  tests.xlsx
robot_test_creator/: excel2suites.py
